# Hackaton

./: .dockerignore  .gitignore  README.md  app.py  compose.yml  pyproject.toml  requirements.txt  start_server.sh
data/: exoplanet_data.csv  exoplanet_data_smol.csv  toi_features_only.csv
dockerfiles/: server.dockerfile
models/: dummy-model.joblib
notebooks/: feature_hierarchy_research.ipynb  first_classifier_aproximation.ipynb  koi_data_exploration_classifier_model_test.ipynb
src/: main.py
src/api/models/: requests.py  responses.py
src/api/routers/: dataset.py  inference.py  train.py
src/core/: filter_data.py  train_models.py
src/models/: toi.py
